1.0.3 - [RELEASEDATE]
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Added support for default column values in mysql handler.
- Fixed getting PDOException when executing queries in mysql handler.
- Implemented FR #8744: Changed the ezcDbSchema::getSchema() method 
  return the schema as a reference, so that it can be modified properly.


1.0.2 - Monday 28 August 2006
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed bug #8900: Problem with auto increment and primary keys for MySQL
  because the skip_primary context was not reset for new tables.
- Added a new validator to check whether columns marked as 'auto_increment'
  actually have a primary key defined as well.
- Implemented FR #8901: Written schemas should indent the XML.
- Refactored the structs to use the new ezcBaseStruct class.


1.0.1 - Monday 19 June 2006
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed a bug that an empty 'is null value' string in the database caused a 
  PHP warning. 


1.0 - Monday 12 June 2006
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Updated documentation and added the tutorial.


1.0rc1 - Monday 29 May 2006
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- No changes at all.


1.0beta3 - Tuesday 09 May 2006
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Added the ezcDbSchemaPersistentWriter class that writes schema definitions
  for the PersistentObject component.
- Fixed a small bug in the MySQL reader where the "decimal" type was not
  understood.


1.0beta2 - Wednesday 19 April 2006
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Refactored code:

  * Changed code to use structs instead of associative arrays everywhere.
  * Reworked the general APIs of the classes.
  * Changed code to use new exception standards.

